# StorageManager-SmartFileCompressor

./: CMakeLists.txt  README.md  duplicates.cpp  duplicates.h  huffman.cpp  huffman.h  main.cpp  optimizer.cpp  optimizer.h  scanner.cpp  scanner.h  summary.cpp  summary.h  utils.cpp  utils.h
StorageManager-SmartFileCompressor/: README.md
